# cams-connector

./: .gitignore  README.md
pi_client/: .env.example  client.py  config.py  file_handler.py  main.py  models.py  pyproject.toml
proxy/: .env.example  config.py  main.py  models.py  pyproject.toml  ws_manager.py
web_client/: index.html  package-lock.json  package.json
web_client/src/: App.css  App.tsx  api.ts  index.css
web_client/src/components/: VideoCard.css  VideoCard.tsx  VideoPlayer.css  VideoPlayer.tsx
